--- a/src/GUI/Gen_Start.fxml
+++ b/src/GUI/Gen_Start.fxml
@@ -14,6 +14,7 @@
                 <String fx:value="Roll (Assign)" />
                 <String fx:value="Roll (Random)" />
                 <String fx:value="Point Buy" />
+                <String fx:value="Manual" />
             </FXCollections>
         </items>
     </ChoiceBox>
