--- a/src/GUI/EditRace.fxml
+++ b/src/GUI/EditRace.fxml
@@ -13,21 +13,39 @@
    <Button fx:id="delete" layoutX="173.0" layoutY="26.0" mnemonicParsing="false" onAction="#onDelete" text="Delete" />
    <Button fx:id="newRace" layoutX="133.0" layoutY="26.0" mnemonicParsing="false" onAction="#onNew" text="New" />
    <Label fx:id="nameReq" layoutX="27.0" layoutY="52.0" text="Required" textFill="#b50d0d" />
-    <ScrollPane layoutX="14.0" layoutY="111.0" prefHeight="158.0" prefWidth="281.0">
-        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="340.0" prefWidth="260.0">
-            <Label fx:id="descriptionReq" text="Required" textFill="#b50d0d"/>
-            <TextArea fx:id="description" layoutY="18.0" onKeyTyped="#updateText" prefHeight="110.0"
-                      prefWidth="260.0" promptText="General Description" wrapText="true"/>
+    <ScrollPane layoutX="10.0" layoutY="111.0" prefHeight="158.0" prefWidth="285.0">
+        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="520.0" prefWidth="260.0">
+            <Label fx:id="descriptionReq" layoutX="6.0" text="Required" textFill="#b50d0d" />
+            <TextArea fx:id="description" layoutX="6.0" layoutY="18.0" onKeyTyped="#updateText" prefHeight="110.0" prefWidth="260.0" promptText="General Description" wrapText="true" />
+         <Label fx:id="description_ageReq" layoutX="6.0" layoutY="128.0" text="Required" textFill="#b50d0d" />
+         <TextArea fx:id="description_age" layoutX="6.0" layoutY="146.0" onKeyTyped="#updateText" prefHeight="110.0" prefWidth="260.0" promptText="Race Age Description" wrapText="true" />
+         <Label fx:id="description_physicalReq" layoutX="6.0" layoutY="256.0" text="Required" textFill="#b50d0d" />
+         <TextArea fx:id="description_physical" layoutX="6.0" layoutY="274.0" onKeyTyped="#updateText" prefHeight="110.0" prefWidth="260.0" promptText="Physical Description" wrapText="true" />
+         <Label fx:id="description_societyReq" layoutX="6.0" layoutY="384.0" text="Required" textFill="#b50d0d" />
+         <TextArea fx:id="description_society" layoutX="6.0" layoutY="402.0" onKeyTyped="#updateText" prefHeight="110.0" prefWidth="260.0" promptText="General Description" wrapText="true" />
+         <Label layoutX="78.0" text="General Description" />
+         <Label layoutX="73.0" layoutY="128.0" text="Race Age Description" />
+         <Label layoutX="77.0" layoutY="256.0" text="Physical Description" />
+         <Label layoutX="77.0" layoutY="384.0" text="Societal Description" />
         </AnchorPane>
     </ScrollPane>
-   <Label layoutX="14.0" layoutY="93.0" text="Descriptions" />
-    <ScrollPane layoutX="298.0" layoutY="111.0" prefHeight="158.0" prefWidth="298.0">
-        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="340.0" prefWidth="280.0">
-            <Label fx:id="trait_ageReq" text="Required" textFill="#b50d0d"/>
-            <TextArea fx:id="trait_age" layoutX="-5.0" layoutY="18.0" onKeyTyped="#updateText" prefHeight="110.0"
-                      prefWidth="282.0" promptText="Trait: Age (Mechanical description)" wrapText="true"/>
+   <Label layoutX="10.0" layoutY="93.0" text="Descriptions" />
+    <ScrollPane layoutX="300.0" layoutY="111.0" prefHeight="158.0" prefWidth="285.0">
+        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="520.0" prefWidth="260.0">
+            <Label fx:id="trait_ageReq" layoutX="6.0" text="Required" textFill="#b50d0d" />
+            <TextArea fx:id="trait_age" layoutX="6.0" layoutY="18.0" onKeyTyped="#updateText" prefHeight="110.0" prefWidth="260.0" promptText="Trait: Age (Mechanical description)" wrapText="true" />
+            <Label fx:id="trait_alignmentReq" layoutX="6.0" layoutY="128.0" text="Required" textFill="#b50d0d" />
+            <TextArea fx:id="trait_alignment" layoutX="6.0" layoutY="146.0" onKeyTyped="#updateText" prefHeight="110.0" prefWidth="260.0" promptText="Race Age Description" wrapText="true" />
+            <Label fx:id="trait_sizeReq" layoutX="6.0" layoutY="256.0" text="Required" textFill="#b50d0d" />
+            <TextArea fx:id="trait_size" layoutX="6.0" layoutY="274.0" onKeyTyped="#updateText" prefHeight="110.0" prefWidth="260.0" promptText="Physical Description" wrapText="true" />
+            <Label fx:id="trait_speedReq" layoutX="6.0" layoutY="384.0" text="Required" textFill="#b50d0d" />
+            <TextArea fx:id="trait_speed" layoutX="6.0" layoutY="402.0" onKeyTyped="#updateText" prefHeight="110.0" prefWidth="260.0" promptText="General Description" wrapText="true" />
+            <Label layoutX="98.0" text="Age Traits" />
+            <Label layoutX="66.0" layoutY="128.0" text="Alignment Tendencies" />
+            <Label layoutX="101.0" layoutY="256.0" text="Size Trait" />
+            <Label layoutX="95.0" layoutY="384.0" text="Speed Trait" />
         </AnchorPane>
     </ScrollPane>
-   <Label layoutX="296.0" layoutY="93.0" text="Traits" />
+   <Label layoutX="300.0" layoutY="93.0" text="Traits" />
    <Label fx:id="mode" layoutX="27.0" layoutY="26.0" prefHeight="18.0" prefWidth="66.0" text="Edit Mode" />
 </AnchorPane>
