--- a/src/GUI/Gen_Start.fxml
+++ b/src/GUI/Gen_Start.fxml
@@ -1,24 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.collections.FXCollections?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 <?import java.lang.*?>
-<?import javafx.collections.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-
-<AnchorPane prefHeight="450.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.GenStartController">
-    <ChoiceBox fx:id="typechoice" layoutX="239.0" layoutY="136.0" prefHeight="26.0" prefWidth="122.0">
-        <items>
-            <FXCollections fx:factory="observableArrayList">
-                <String fx:value="" />
-                <String fx:value="Array" />
-                <String fx:value="Roll (Assign)" />
-                <String fx:value="Roll (Random)" />
-                <String fx:value="Point Buy" />
-                <String fx:value="Manual" />
-            </FXCollections>
-        </items>
-    </ChoiceBox>
-    <Button fx:id="nextbtn" defaultButton="true" disable="true" layoutX="300.0" layoutY="394.0" mnemonicParsing="false" onAction="#onNext" prefHeight="26.0" prefWidth="91.0" text="Next" />
-    <Button cancelButton="true" layoutX="208.0" layoutY="394.0" mnemonicParsing="false" onAction="#onClose" prefHeight="26.0" prefWidth="91.0" text="Cancel" />
-    <Label alignment="CENTER" layoutX="239.0" layoutY="110.0" prefHeight="18.0" prefWidth="122.0" text="Stat Roll Type" textAlignment="CENTER" />
-</AnchorPane>
+<HBox alignment="CENTER" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.GenStartController" minWidth="600.0" minHeight="450.0">
+    <VBox alignment="CENTER">
+        <AnchorPane prefHeight="450.0" prefWidth="600.0">
+            <ChoiceBox fx:id="typechoice" layoutX="239.0" layoutY="136.0" prefHeight="26.0" prefWidth="122.0">
+                <items>
+                    <FXCollections fx:factory="observableArrayList">
+                        <String fx:value=""/>
+                        <String fx:value="Array"/>
+                        <String fx:value="Roll (Assign)"/>
+                        <String fx:value="Roll (Random)"/>
+                        <String fx:value="Point Buy"/>
+                        <String fx:value="Manual"/>
+                    </FXCollections>
+                </items>
+            </ChoiceBox>
+            <Button fx:id="nextbtn" defaultButton="true" disable="true" layoutX="300.0" layoutY="394.0" mnemonicParsing="false" onAction="#onNext" prefHeight="26.0" prefWidth="91.0" text="Next"/>
+            <Button cancelButton="true" layoutX="208.0" layoutY="394.0" mnemonicParsing="false" onAction="#onClose" prefHeight="26.0" prefWidth="91.0" text="Cancel"/>
+            <Label alignment="CENTER" layoutX="239.0" layoutY="110.0" prefHeight="18.0" prefWidth="122.0" text="Stat Roll Type" textAlignment="CENTER"/>
+        </AnchorPane>
+    </VBox>
+</HBox>
