--- a/src/GUI/Gen_Stats_Manual.fxml
+++ b/src/GUI/Gen_Stats_Manual.fxml
@@ -1,49 +1,54 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.*?>
-
-<AnchorPane prefHeight="450.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.GenStats_Manual_Controller">
-   <Button defaultButton="true" layoutX="300.0" layoutY="394.0" mnemonicParsing="false" onAction="#onNext" prefHeight="26.0" prefWidth="91.0" text="Next" />
-   <Button cancelButton="true" layoutX="208.0" layoutY="394.0" mnemonicParsing="false" onAction="#onClose" prefHeight="26.0" prefWidth="91.0" text="Back" />
-   <Label fx:id="error" alignment="CENTER" layoutY="47.0" minWidth="-Infinity" prefHeight="18.0" prefWidth="600.0" textAlignment="CENTER" textFill="#b50d0d" />
-   <Label fx:id="error2" alignment="CENTER" layoutY="65.0" minWidth="-Infinity" prefHeight="18.0" prefWidth="600.0" textAlignment="CENTER" textFill="#b50d0d" />
-   <Text layoutX="191.0" layoutY="162.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Str:  " textAlignment="RIGHT" wrappingWidth="46.00000077486038" />
-   <Button layoutX="254.0" layoutY="267.0" mnemonicParsing="false" onAction="#onReset" prefHeight="26.0" prefWidth="91.0" text="Reset" />
-   <TextField fx:id="strength" layoutX="238.0" layoutY="149.0" onAction="#updateText" prefHeight="18.0" prefWidth="32.0" promptText="Str">
-      <font>
-         <Font size="8.0" />
-      </font>
-   </TextField>
-   <TextField fx:id="dexterity" layoutX="238.0" layoutY="165.0" onAction="#updateText" prefHeight="18.0" prefWidth="32.0" promptText="Dex">
-      <font>
-         <Font size="8.0" />
-      </font>
-   </TextField>
-   <TextField fx:id="constitution" layoutX="238.0" layoutY="182.0" onAction="#updateText" prefHeight="18.0" prefWidth="32.0" promptText="Con">
-      <font>
-         <Font size="8.0" />
-      </font>
-   </TextField>
-   <TextField fx:id="intelligence" layoutX="362.0" layoutY="148.0" onAction="#updateText" prefHeight="18.0" prefWidth="32.0" promptText="Int">
-      <font>
-         <Font size="8.0" />
-      </font>
-   </TextField>
-   <TextField fx:id="wisdom" layoutX="362.0" layoutY="164.0" onAction="#updateText" prefHeight="18.0" prefWidth="32.0" promptText="Wis">
-      <font>
-         <Font size="8.0" />
-      </font>
-   </TextField>
-   <TextField fx:id="charisma" layoutX="362.0" layoutY="181.0" onAction="#updateText" prefHeight="18.0" prefWidth="32.0" promptText="Cha">
-      <font>
-         <Font size="8.0" />
-      </font>
-   </TextField>
-   <Text layoutX="191.0" layoutY="178.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Dex:  " textAlignment="RIGHT" wrappingWidth="46.00000077486038" />
-   <Text layoutX="191.0" layoutY="194.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Con:  " textAlignment="RIGHT" wrappingWidth="46.00000077486038" />
-   <Text layoutX="315.0" layoutY="161.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Int:  " textAlignment="RIGHT" wrappingWidth="46.00000077486038" />
-   <Text layoutX="315.0" layoutY="177.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Wis:  " textAlignment="RIGHT" wrappingWidth="46.00000077486038" />
-   <Text layoutX="315.0" layoutY="195.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Cha:  " textAlignment="RIGHT" wrappingWidth="46.00000077486038" />
-</AnchorPane>
+<HBox alignment="CENTER" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.GenStats_Manual_Controller" minWidth="600.0" minHeight="450.0">
+    <VBox alignment="CENTER">
+        <AnchorPane prefHeight="450.0" prefWidth="600.0">
+            <Button defaultButton="true" layoutX="300.0" layoutY="394.0" mnemonicParsing="false" onAction="#onNext" prefHeight="26.0" prefWidth="91.0" text="Next"/>
+            <Button cancelButton="true" layoutX="208.0" layoutY="394.0" mnemonicParsing="false" onAction="#onClose" prefHeight="26.0" prefWidth="91.0" text="Back"/>
+            <Label fx:id="error" alignment="CENTER" layoutY="47.0" minWidth="-Infinity" prefHeight="18.0" prefWidth="600.0" textAlignment="CENTER" textFill="#b50d0d"/>
+            <Label fx:id="error2" alignment="CENTER" layoutY="65.0" minWidth="-Infinity" prefHeight="18.0" prefWidth="600.0" textAlignment="CENTER" textFill="#b50d0d"/>
+            <Text layoutX="191.0" layoutY="162.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Str:  " textAlignment="RIGHT" wrappingWidth="46.00000077486038"/>
+            <Button layoutX="254.0" layoutY="267.0" mnemonicParsing="false" onAction="#onReset" prefHeight="26.0" prefWidth="91.0" text="Reset"/>
+            <TextField fx:id="strength" layoutX="238.0" layoutY="149.0" onAction="#updateText" prefHeight="18.0" prefWidth="32.0" promptText="Str">
+                <font>
+                    <Font size="8.0"/>
+                </font>
+            </TextField>
+            <TextField fx:id="dexterity" layoutX="238.0" layoutY="165.0" onAction="#updateText" prefHeight="18.0" prefWidth="32.0" promptText="Dex">
+                <font>
+                    <Font size="8.0"/>
+                </font>
+            </TextField>
+            <TextField fx:id="constitution" layoutX="238.0" layoutY="182.0" onAction="#updateText" prefHeight="18.0" prefWidth="32.0" promptText="Con">
+                <font>
+                    <Font size="8.0"/>
+                </font>
+            </TextField>
+            <TextField fx:id="intelligence" layoutX="362.0" layoutY="148.0" onAction="#updateText" prefHeight="18.0" prefWidth="32.0" promptText="Int">
+                <font>
+                    <Font size="8.0"/>
+                </font>
+            </TextField>
+            <TextField fx:id="wisdom" layoutX="362.0" layoutY="164.0" onAction="#updateText" prefHeight="18.0" prefWidth="32.0" promptText="Wis">
+                <font>
+                    <Font size="8.0"/>
+                </font>
+            </TextField>
+            <TextField fx:id="charisma" layoutX="362.0" layoutY="181.0" onAction="#updateText" prefHeight="18.0" prefWidth="32.0" promptText="Cha">
+                <font>
+                    <Font size="8.0"/>
+                </font>
+            </TextField>
+            <Text layoutX="191.0" layoutY="178.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Dex:  " textAlignment="RIGHT" wrappingWidth="46.00000077486038"/>
+            <Text layoutX="191.0" layoutY="194.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Con:  " textAlignment="RIGHT" wrappingWidth="46.00000077486038"/>
+            <Text layoutX="315.0" layoutY="161.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Int:  " textAlignment="RIGHT" wrappingWidth="46.00000077486038"/>
+            <Text layoutX="315.0" layoutY="177.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Wis:  " textAlignment="RIGHT" wrappingWidth="46.00000077486038"/>
+            <Text layoutX="315.0" layoutY="195.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Cha:  " textAlignment="RIGHT" wrappingWidth="46.00000077486038"/>
+        </AnchorPane>
+    </VBox>
+</HBox>
