--- a/src/GUI/MainMenu.fxml
+++ b/src/GUI/MainMenu.fxml
@@ -1,11 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-
-<AnchorPane prefHeight="450.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.MainMenuController">
-    <Label alignment="CENTER" prefHeight="18.0" prefWidth="600.0" text="Main Menu" textAlignment="CENTER" />
-   <Button layoutX="139.0" layoutY="103.0" mnemonicParsing="false" onAction="#onNewChar" text="New DND.Character" textAlignment="CENTER" />
-   <Button layoutX="338.0" layoutY="103.0" mnemonicParsing="false" onAction="#onLoadChar" text="Load DND.Character" />
-   <ListView fx:id="charlist" layoutX="200.0" layoutY="139.0" prefHeight="247.0" prefWidth="200.0" />
-</AnchorPane>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<HBox alignment="CENTER" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.MainMenuController" minWidth="600.0" minHeight="450.0">
+    <VBox alignment="CENTER">
+        <AnchorPane prefHeight="450.0" prefWidth="600.0">
+            <Label alignment="CENTER" prefHeight="18.0" prefWidth="600.0" text="Main Menu" textAlignment="CENTER"/>
+            <Button layoutX="139.0" layoutY="103.0" mnemonicParsing="false" onAction="#onNewChar" text="New DND.Character" textAlignment="CENTER"/>
+            <Button layoutX="338.0" layoutY="103.0" mnemonicParsing="false" onAction="#onLoadChar" text="Load DND.Character"/>
+            <ListView fx:id="charlist" layoutX="200.0" layoutY="139.0" prefHeight="247.0" prefWidth="200.0"/>
+        </AnchorPane>
+    </VBox>
+</HBox>
